Update with remote theme

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,7 @@ published: 2017-01-16
 shortname: ICGI
 layout: proceedings
 series: Proceedings of Machine Learning Research
+issn: 1938-7228
 id: icgi16
 month: 0
 cycles: false
@@ -39,8 +40,11 @@ baseurl: "/v57"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+plugins:
+- jekyll-remote-theme
+remote_theme: lawrennd/proceedings
 permalink: "/:title.html"
-github:
+ghub:
   edit: true
   repository: v57
 display:
@@ -63,6 +67,6 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
-# Auto generated from v57.bib
----
+# Original source:  /Users/neil/mlresearch/bibtex.bib
