--- a/_config.yml
+++ b/_config.yml
@@ -7,6 +7,7 @@ end: 2016-10-07
 published: 2017-01-16
 shortname: ICGI
 layout: proceedings
+publisher: PMLR
 series: Proceedings of Machine Learning Research
 issn: 1938-7228
 id: icgi16
