--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 ---
 booktitle: Proceedings of The 13th International Conference on Grammatical Inference
+orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 volume: 57
 year: '2016'
 start: 2016-10-05
@@ -43,6 +44,10 @@ baseurl: "/v57"
 twitter_username: MLResearchPress
 github_username: mlresearch
 markdown: kramdown
+exclude:
+- README.md
+- Gemfile
+- ".gitignore"
 style: pmlr
 plugins:
 - jekyll-feed
@@ -73,6 +78,5 @@ conference:
 analytics:
   google:
     tracking_id: UA-92432422-1
-orig_bibfile: "/Users/neil/mlresearch/bibtex.bib"
 # Site settings
 # Original source:  /Users/neil/mlresearch/bibtex.bib
